[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "PyGRidge"
authors = [
    {name = "Jordan Deklerk", email = "jordan.deklerk@example.com"},
]
description = "A Python package for group ridge regression"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["ridge regression", "group regression", "machine learning"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools_scm]
write_to = "src/PyGRidge/_version.py"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "test",
]
pythonpath = [
  "src"
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.vscode
  | build
  | dist
  | doc/_build
  | doc/auto_examples
  | sklearn/externals
  | asv_benchmarks/env
)/
'''

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
line-length = 88
target-version = "py37"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["PyGRidge"]
